syntax = "proto3";
package main;

import "google/protobuf/timestamp.proto";
import "google/protobuf/empty.proto";

option go_package = "github.com/minhd-vu/grpc/api";

message Person {
  string name = 1;
  // Unique ID number for this person.
  int32 id = 2;
  string email = 3;

  enum PhoneType {
    MOBILE = 0;
    HOME = 1;
    WORK = 2;
  }

  message PhoneNumber {
    string number = 1;
    PhoneType type = 2;
  }

  repeated PhoneNumber phones = 4;

  google.protobuf.Timestamp last_updated = 5;
}

// Our address book file is just one of these.
message AddressBook {
  repeated Person people = 1;
}

service Service {
  rpc GetAddressBook(google.protobuf.Empty) returns (AddressBook);
  rpc GetPerson(Person) returns (Person);
  rpc AddPerson(Person) returns (google.protobuf.Empty);
}